--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   },
   "author": "FE (BP&IT)",
   "dependencies": {
-    "express": "3.x",
+    "express": "3.1.0",
     "ejs": "*",
-    "cas":"*"
+    "cas":"0.0.4"
   },
   "devDependencies":{
     "bai": "0.2.4"
