--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "author": "FE (BP&IT)",
   "dependencies": {
-    "express": "3.x",
+    "express": "*",
     "ejs": "*",
     "cas":"*"
   },
