--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "dependencies": {
     "express": "3.1.0",
     "ejs": "*",
-    "cas":"0.0.4"
+    "cas": "*",
+    "socket.io": "*"
   },
   "devDependencies":{
-    "bai": "0.2.4"
+    "bai": "*"
   }
 }
