--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "node-server-proxy",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node app"
-  },
-  "author": "FE (BP&IT)",
-  "dependencies": {
-    "express": "3.1.0",
-    "ejs": "*",
-    "socket.io": "*"
-  },
-  "devDependencies":{
-    "bai": "*"
-  }
+    "name": "node-server-proxy",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "start": "node app"
+    },
+    "author": "FE (BP&IT)",
+    "dependencies": {
+        "express": "3.1.0",
+        "ejs": "*",
+        "cas": "*",
+        "socket.io": "*",
+        "connect-redis":"*"
+    },
+    "devDependencies":{
+        "bai": "*"
+    }
 }
