--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "express": "3.1.0",
         "ejs": "*",
         "socket.io": "*",
+        "xml2js":"*",
         "connect-redis": "*"
     },
     "devDependencies": {
